--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,42 @@
  *= require_tree .
  *= require_self
  */
+ @import url('https://fonts.googleapis.com/css2?family=Lora&family=Montserrat:wght@100&family=Open+Sans:wght@300&family=Roboto:wght@100;400&display=swap');
+
+ .container {
+   width: 600px;
+ }
+
+ ul {
+  display:flex;
+  justify-content: space-around;
+  padding: 0px;
+ }
+
+ ul > li {
+  padding: 2px;
+  margin: 10px;
+  width: 30px;
+  font-size: 25px;
+  text-align: center;
+  background-color: #3498DD;
+  color: white;
+  font-weight: bolder;
+  font-family: 'roboto';
+  border: 1px solid #3498DD;
+  box-shadow: 1px 1px 1px rgba( 0, 0, 0, 0.2);
+ }
+
+ .form {
+   display:flex;
+ }
+
+ .form-input {
+   flex: 1;
+   height: 30px;
+   border-radius: 4px;
+ }
+
+ .form .btn-primary{
+  width: 100px;
+ }
